<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#EC7D91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/closeBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:contentDescription="@string/close_button"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_margin="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_margin="15dp"/>
        <TextView
            android:id="@+id/popUpMsg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_msg1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/popUpMsg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_msg2"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_margin="15dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>